fixed room layout (still not responsive)

--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -16,6 +16,10 @@
 	flex-flow: column wrap;
 }
 
+.main {
+	width: 80vw;
+}
+
 .create-or-join-wrapper {
 	flex: 1;
 	display: flex;
@@ -45,23 +49,26 @@
 .picker_wrapper {
 	width: 100vw;
 	overflow-x: auto;
-	padding: 1.5rem 2.5rem 1.5rem 1.25rem;
+	padding: calc(#{$grid-gap} * 0.6) $grid-gap calc(#{$grid-gap} * 0.6)
+		calc(#{$grid-gap} / 2);
 }
 
 .picker__statement {
+	flex-shrink: 0;
 	width: calc(16rem + 1.5 * #{$grid-gap});
-	padding: 1.5rem 1.25rem 1.5rem 2.5rem;
+	padding: calc(#{$grid-gap} * 0.6) calc(#{$grid-gap} / 2)
+		calc(#{$grid-gap} * 0.6) $grid-gap;
 }
 
 .picker__wrapper__container {
 	display: flex;
 	flex-flow: row nowrap;
-	margin: 0 calc(2.5rem / 2 * -1);
+	margin: 0 calc(#{$grid-gap} / 2 * -1);
 	width: fit-content;
 }
 
 .picker__wrapper__container > * {
-	margin: 0 calc(2.5rem / 2);
+	margin: 0 calc(#{$grid-gap} / 2);
 }
 
 .gallery {
